code/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T150600+0000/task_id=PostgresTable/attempt=2.log
[2024-01-05T15:07:31.472+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509
[2024-01-05T15:07:31.473+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable'
[2024-01-05T15:07:31.503+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509
[2024-01-05T15:07:31.504+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable'
[2024-01-05T15:07:31.548+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: User_counter.PostgresTable scheduled__2024-01-05T15:06:00+00:00 [queued]>
[2024-01-05T15:07:31.559+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: User_counter.PostgresTable scheduled__2024-01-05T15:06:00+00:00 [queued]>
[2024-01-05T15:07:31.560+0000] {taskinstance.py:2171} INFO - Starting attempt 2 of 2
[2024-01-05T15:07:31.580+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): PostgresTable> on 2024-01-05 15:06:00+00:00
[2024-01-05T15:07:31.584+0000] {standard_task_runner.py:60} INFO - Started process 299 to run task
[2024-01-05T15:07:31.589+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'User_counter', 'PostgresTable', 'scheduled__2024-01-05T15:06:00+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/User_counter.py', '--cfg-path', '/tmp/tmp07xkg4ob']
[2024-01-05T15:07:31.593+0000] {standard_task_runner.py:88} INFO - Job 6: Subtask PostgresTable
[2024-01-05T15:07:31.654+0000] {logging_mixin.py:188} INFO - Changing /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509
[2024-01-05T15:07:31.655+0000] {logging_mixin.py:188} INFO - Failed to change /opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=User_counter/run_id=scheduled__2024-01-05T15:06:00+00:00/task_id=PostgresTable'
[2024-01-05T15:07:31.657+0000] {task_command.py:423} INFO - Running <TaskInstance: User_counter.PostgresTable scheduled__2024-01-05T15:06:00+00:00 [running]> on host 8209e4f5b06e
[2024-01-05T15:07:31.745+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Airflow' AIRFLOW_CTX_DAG_ID='User_counter' AIRFLOW_CTX_TASK_ID='PostgresTable' AIRFLOW_CTX_EXECUTION_DATE='2024-01-05T15:06:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-05T15:06:00+00:00'
[2024-01-05T15:07:31.746+0000] {sql.py:276} INFO - Executing: 
            CREATE DATABASE IF NOT EXISTS users;
          
[2024-01-05T15:07:31.756+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T15:07:31.766+0000] {base.py:83} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-05T15:07:31.771+0000] {sql.py:432} INFO - Running statement: 
            CREATE DATABASE IF NOT EXISTS users;
          , parameters: None
[2024-01-05T15:07:31.773+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 2:             CREATE DATABASE IF NOT EXISTS users;
                                       ^

[2024-01-05T15:07:31.784+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=User_counter, task_id=PostgresTable, execution_date=20240105T150600, start_date=20240105T150731, end_date=20240105T150731
[2024-01-05T15:07:31.800+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 6 for task PostgresTable (syntax error at or near "NOT"
LINE 2:             CREATE DATABASE IF NOT EXISTS users;
                                       ^
; 299)
[2024-01-05T15:07:31.842+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-05T15:07:31.867+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
